tests/ui/suggestions/issue-116434-2021.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-116434-2021.rs:5:17
   |
LL |     type Clone;
   |     ---------- you might have meant to use this associated type
LL |     fn foo() -> Clone;
   |                 ^^^^^
   |
help: `Clone` is not object safe, use `impl Clone` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn foo() -> impl Clone;
   |                 ++++
help: there is an associated type with the same name
   |
LL |     fn foo() -> Self::Clone;
   |                 ++++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-116434-2021.rs:15:20
   |
LL |     type DbHandle;
   |     ------------- you might have meant to use this associated type
LL |     fn handle() -> DbHandle;
   |                    ^^^^^^^^
   |
help: `DbHandle` is not object safe, use `impl DbHandle` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn handle() -> impl DbHandle;
   |                    ++++
help: there is an associated type with the same name
   |
LL |     fn handle() -> Self::DbHandle;
   |                    ++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0782`.
